# Haskell-Plutus-Course-Notes

./: CHANGELOG.md  README.md
lecture1/: day_01.md
lecture1/code/: Scratchpad.hs
lecture10/: day_10.md
lecture10/code/: Parsing.hs
lecture10/code/Parser/: Five.hs  Four.hs  One.hs  Three.hs  Two.hs
lecture11/: CHANGELOG.md  day_11.md  lecture11.cabal
lecture11/code/: Datatypes.hs  Probability.hs
lecture12/: CHANGELOG.md  day_12.md  lecture12.cabal
lecture12/code/: MerkleTree.hs  MoreDataStructures.hs
lecture13/: CHANGELOG.md  day_13.md  lecture13.cabal
lecture13/code/: Optics.hs  Traversable.hs
lecture14/: CHANGELOG.md  day_14.md  lecture14.cabal
lecture14/code/: MoreOptics.hs  Optics.hs  Profunctor.hs
lecture15/: CHANGELOG.md  day_15.md  lecture15.cabal
lecture15/app/: more-monads.hs
lecture15/code/: MoreMonads.hs  Order.hs  ReaderIO.hs
lecture16/: CHANGELOG.md  day_16.md  lecture16.cabal
lecture16/code/FreeMonads/: AdHoc.hs  Concurrency.hs  Expr.hs  Free.hs  GP.hs  MTL.hs  Prob.hs
lecture17/: CHANGELOG.md  day_17.md  lecture17.cabal
lecture17/code/: Example.hs  GHC.hs  Simple.hs
lecture18/: CHANGELOG.md  day_18.md  lecture18.cabal
lecture18/app/: Main.hs
lecture18/code/: Power.hs  Quasi.hs  UsePower.hs  UseQuasi.hs
lecture19/: CHANGELOG.md  day_19.md  lecture19.cabal
lecture2/code/: ScratchPad.hs
lecture20/: CHANGELOG.md  day_20.md  lecture20.cabal
lecture20/app/: marlowe.hs
lecture20/code/FreeMonads/: Expr.hs
lecture21/: CHANGELOG.md  lecture21.cabal
lecture22/: CHANGELOG.md  cabal.project  day_22.md  lecture22.cabal
lecture22/keys/: user1.addr  user1.skey  user1.vkey
lecture22/offchain/: offchain.cabal
lecture22/offchain/src/: Offchain.hs
lecture22/onchain/: CHANGELOG.md  onchain.cabal
lecture22/onchain/src/: Gift.hs
lecture22/scripts/: collect=gift.sh  make-gift.sh
lecture22/utilities/src/Utilities/: PlutusTx.hs  Serialise.hs
lecture23/: CHANGELOG.md  day_23.md  lecture23.cabal
lecture23/onchain/: validator-onchain.cabal
lecture23/onchain/src/: Atomic.hs  Burn.hs  FortyTwo.hs
lecture3/code/: PolymorphismTypeClasses.hs
lecture8/: CHANGELOG.md  day_08.md  lecture8.cabal
lecture8/code/: Concurrency.hi  Concurrency.hs  accounts-async.hs  accounts-stm.hs  accounts.hs  ioref.hs  shouting-server.hs
lecture9/: CHANGELOG.md  day_09.md  lecture9.cabal
lecture9/app/: Main.hs  chat-server.hs
lecture9/code/: List.hs
lecture9/code/Server/: Chat.hs  Counting.hs  Counting2.hs  Shouting.hs  Utils.hs
lecture_5/: day_05.md
lecture_5/code/: Effects.hs
lecture_6/: CHANGELOG.md  day_06.md  lecture6.cabal
lecture_6/code/: Testing.hs
lecture_6/test/: Main.hs
lecture_7/: CHANGELOG.md  day_07.md  lecture7.cabal
lecture_7/code/: code.cabal
lecture_7/code/src/: AbstractionPatterns.hs  Table.hs
lectures-plutus/: cabal.project  config-core-maestro-preprod.json
lectures-plutus/assets/: vesting.plutus
lectures-plutus/comonads/: CHANGELOG.md  LICENSE  comonads.cabal
lectures-plutus/comonads/src/: Comonad.hs
lectures-plutus/keys/: beneficiary.address  beneficiary.pkh  beneficiary.skey  beneficiary.vkey
lectures-plutus/questions/: day_26.md
lectures-plutus/testing/: day_25.md
lectures-plutus/testing/homework/: TExploitableSwap.hs
lectures-plutus/testing/lecture/: ExploitableSwap.hs  NegativeRTimed.hs  State.hs
lectures-plutus/testing/lecture_tests/: PSM.hs  PTNegativeRTimed.hs  UTNegativeRTimed.hs
lectures-plutus/time-minting/: day_24.md
lectures-plutus/time-minting/offchain/: time-minting-offchain.cabal
lectures-plutus/time-minting/offchain/src/: MintingOffchain.hs  Offchain.hs
lectures-plutus/time-minting/onchain/: time-minting-onchain.cabal
lectures-plutus/time-minting/onchain/src/: Minting.hs  Vesting.hs
lectures-plutus/utilities/: utilities.cabal
lectures-plutus/utilities/src/: Utilities.hs
lectures-plutus/utilities/src/Utilities/: PlutusTx.hs  Serialise.hs
