cabal-version:      2.4
name:               lecture13
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jaysonamati
maintainer:         jaysonamati@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Optics
                    , Traversable
    build-depends:    base ^>=4.16.4.0
                    , containers
                    , bytestring
                    , mtl
                    -- , random
                    -- , vector
                    -- , ghc-prim
                    -- , binary
                    -- , bytestring
                    -- , text
                    -- , cryptonite
                    -- , memory
    hs-source-dirs:   code
    default-language: Haskell2010

executable lecture13
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
