cabal-version:      2.4
name:               lecture15
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jaysonamati
maintainer:         jaysonamati@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MoreMonads
                    , Order
                    , ReaderIO
    build-depends:    base ^>=4.16.4.0
                    , containers
                    , bytestring
                    , mtl
    hs-source-dirs:   code
    default-language: Haskell2010

executable more-monads
    main-is:          more-monads.hs
    build-depends:    base ^>=4.16.4.0
                    , lecture15
    hs-source-dirs:   app 
    default-language: Haskell2010
    ghc-options:     -Wall -O2