cabal-version:      2.4
name:               lecture20
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jaysonamati
maintainer:         jaysonamati@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  FreeMonads.Expr
    build-depends:    base ^>=4.14.3.0
                    , containers
                    , mtl
    hs-source-dirs:   code
    default-language: Haskell2010
    ghc-options:      -Wall

executable marlowe
    main-is:          marlowe.hs
    build-depends:    base ^>=4.14.3.0
                    , marlowe-cardano
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
