cabal-version:      2.4
name:               lecture8
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jaysonamati
maintainer:         jaysonamati@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable accounts
    main-is:          accounts.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , random
    hs-source-dirs:   code
    default-language: Haskell2010


executable accounts-stm
    main-is:          accounts-stm.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , random
                    , stm
    hs-source-dirs:   code
    default-language: Haskell2010

executable accounts-async
    main-is:          accounts-async.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , random
                    , stm
                    , async
    hs-source-dirs:   code
    default-language: Haskell2010

executable shouting-server
    main-is:          shouting-server.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , random
                    , stm
                    , async
                    , network
                    , network-simple
    hs-source-dirs:   code
    default-language: Haskell2010