cabal-version:      2.4
name:               lecture9
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             jaysonamati
maintainer:         jaysonamati@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library
    exposed-modules: Server.Utils
                     Server.Shouting
                     Server.Counting
                     Server.Chat

    build-depends:    base ^>=4.16.4.0
                    , network
                    , network-simple
                    , stm
                    , async
                    , random
    hs-source-dirs:   code
    default-language: Haskell2010
    ghc-options:      -Wall


executable lecture9
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Server.Utils
                   Server.Shouting
                   Server.Counting
                   Server.Chat

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

executable counting
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , network
                    , network-simple
                    , stm
                    , async
                    , random
    hs-source-dirs:   app
    default-language: Haskell2010

executable chat-server
    main-is:          chat-server.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , network
                    , network-simple
                    , stm
                    , async
                    , random
    hs-source-dirs:   app
    default-language: Haskell2010    