cabal-version:   3.4
name:            comonads
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          jaysonamati
maintainer:      jaysonamati@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
